<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <item android:title="Home"
        android:id="@+id/home"
        android:icon="@drawable/ic_action_name">

    </item>


        <group android:checkableBehavior="single">

                                <item
                                    android:id="@+id/firstmov"
                                    android:title="@string/Movie1"
                                    android:icon="@drawable/ic_menu_slideshow"
                                    />
                                <item
                                    android:id="@+id/secmov"
                                    android:title="@string/Movie2"
                                    android:icon="@drawable/ic_menu_slideshow"
                                    />
                                <item
                                    android:id="@+id/thirdmov"
                                    android:title="@string/Movie3"
                                    android:icon="@drawable/ic_menu_slideshow"
                                    />

        </group>
            <item android:title="Films">
                <menu>
                                <item
                                    android:id="@+id/fthmov"
                                    android:title="@string/Movie4"
                                    android:icon="@drawable/ic_menu_slideshow"
                                    />
                                <item
                                    android:id="@+id/ffthmov"
                                    android:title="@string/Movie5"
                                    android:icon="@drawable/ic_menu_slideshow"
                                    />
                                <item
                                    android:id="@+id/sixthmov"
                                    android:title="@string/Movie6"
                                    android:icon="@drawable/ic_menu_slideshow"

                                    />
                                <item
                                    android:id="@+id/seventhmov"
                                    android:title="@string/Movie7"
                                    android:icon="@drawable/ic_menu_slideshow"
                                    />
                </menu>

            </item>














</menu>